# trait-set

./: CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: mod.rs  tests.rs  ui.rs
tests/ui/: 01_bound_failure.rs  01_bound_failure.stderr
tests/ui/correct/: 01_simple.rs  02_associated_types.rs  03_generic.rs  04_lifetimes.rs  05_multiple.rs  06_combination.rs  07_serde_hrtb.rs  08_interoperability.rs  09_generic_param_trait_bounds.rs  10_doc_comment.rs
tests/ui/incorrect/: 01_bound_failure.rs  01_bound_failure.stderr
